--- a/src/css/landingPage.css
+++ b/src/css/landingPage.css
@@ -10,7 +10,7 @@
   overflow: hidden;
   padding: 2rem 1rem;
   gap: 2rem;
-  background: linear-gradient(135deg, #778c85 0%, #e2e8f0 100%);
+  background: #c1cccf;
 }
 
 /* Header Styling */
